@@ -71,4 +71,5 @@ Version 1.2
 ~~~~~~~~~~~
 * Post DiFX-1.5.1
 * mk5dir -- add suffix to distinguish otherwise identically named scans
-
+* mk5dir -- fix "A" and "B" source designators
+* mk5dir -- specify time range to copy 
